force-app/main/default/objects/Auto_Enrollment_Deferral_Escalation_Rate__mdt/Auto_Enrollment_Deferral_Escalation_Rate__mdt.object-meta.xml
<CustomObject>
    <description>This table will be used to populate AutoDeferral Type, Min Auto Deferral Percentage, Max Auto Deferral Percentage, Yearly Auto Deferral Percentage Increase</description>
    <label>Auto-Enrollment Deferral/Escalation Rate</label>
    <pluralLabel>Auto-Enrollment Deferral/Escalation Rate</pluralLabel>
</CustomObject>