force-app/main/default/objects/Auto_Enrollment_Deferral_Escalation_Rate__mdt/fields/Auto_Deferral_Type__c.field-meta.xml
<CustomField>
    <fullName>Auto_Deferral_Type__c</fullName>
    <label>Auto Deferral Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>