force-app/main/default/objects/Auto_Enrollment_Deferral_Escalation_Rate__mdt/fields/Min_Auto_Deferral_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Min_Auto_Deferral_Percentage__c</fullName>
    <label>Min Auto Deferral Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>